--- a/content/panorama/styles/custom_game/kill_limit.css
+++ b/content/panorama/styles/custom_game/kill_limit.css
@@ -5,10 +5,10 @@
 
 #KillLimitHud {
 	horizontal-align: center;
-	position: 0px 44px 0px;
+	position: 0 44px 0;
 	background-image: url("s2r://panorama/images/items/emptyitembg_png.vtex");
 	padding: 6px 10px 8px 10px;
-	border-radius: 0px 0px 20px 20px;
+	border-radius: 0 0 20px 20px;
 }
 
 #KillLimit {
